--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A18501A2-6959-40B2-9D17-9BB563C51BDC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Polimi.DEIB.VahidJalili.DI4</RootNamespace>
+    <RootNamespace>Genometric.Di4</RootNamespace>
     <AssemblyName>Di4</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
