--- a/Di4/Di4B/Di4B.csproj
+++ b/Di4/Di4B/Di4B.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D17DD4B8-EA5A-4A0C-A029-7B353B092AA1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Polimi.DEIB.VahidJalili.DI4.DI4B</RootNamespace>
+    <RootNamespace>Genometric.Di4.Di4B</RootNamespace>
     <AssemblyName>Di4B</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
