--- a/Di4/Di4DataSim/Di4DataSim.csproj
+++ b/Di4/Di4DataSim/Di4DataSim.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F523DCF9-8868-493D-A354-F6BD08FF6706}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Polimi.DEIB.VahidJalili.DI4DataSim</RootNamespace>
+    <RootNamespace>Genometric.DataSim</RootNamespace>
     <AssemblyName>Di4DataSim</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
