--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -104,7 +104,6 @@
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BatchIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\RangeIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BatchIndex2R.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\Inv %28Inverted%29\BatchIndex2R.cs" />
     <Compile Include="Comparers\StringComparer.cs" />
     <Compile Include="Di4.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
@@ -127,7 +126,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="BasicOperations\IndexFunctions\Inv %28Inverted%29\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
