--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -84,11 +84,10 @@
     <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\DecomposerValue.cs" />
     <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\DecompositionStack.cs" />
     <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\DesignatedRegion.cs" />
-    <Compile Include="AuxiliaryComponents\Inc %28Incremental%29\StatsCalculator.cs" />
+    <Compile Include="AuxiliaryComponents\StatsCalculator.cs" />
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="AuxiliaryComponents\Stats.cs" />
-    <Compile Include="AuxiliaryComponents\StatsCalculatorInv.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_OLD.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\MapCount.cs" />
@@ -108,7 +107,7 @@
     <Compile Include="Di4.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
     <Compile Include="PrimaryComponents\BlockValue.cs" />
-    <Compile Include="PrimaryComponents\Inc %28Incremental%29\B.cs" />
+    <Compile Include="PrimaryComponents\B.cs" />
     <Compile Include="PrimaryComponents\BlockKey.cs" />
     <Compile Include="AuxiliaryComponents\Di3Options.cs" />
     <Compile Include="AuxiliaryComponents\Enums.cs" />
