--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -96,8 +96,8 @@
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\VariationAnalysis.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\Map.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BulkIndex.cs" />
-    <Compile Include="BasicOperations\FirstOrderFunctions\Inc %28Incremental%29\AccumulationStats.cs" />
-    <Compile Include="BasicOperations\FirstOrderFunctions\Inc %28Incremental%29\Merge.cs" />
+    <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
+    <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
     <Compile Include="BasicOperations\HigherOrderFunctions\Inc %28Incremental%29\CoverSummit_mid.cs" />
     <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
     <Compile Include="BasicOperations\IndexFunctions\Inc %28Incremental%29\BatchIndex.cs" />
